--- a/style.css
+++ b/style.css
@@ -58,3 +58,15 @@
       align-content: stretch;
       align-items: center;
     }
+
+    .score {
+			position: absolute;
+			top: 0;
+			right: 0;
+			background-color: #b199a4;
+			color: white;
+			padding: 10px;
+			font-size: 24px;
+			font-weight: bold;
+			border-radius: 5px 0 0 0;
+		}
