--- a/style.css
+++ b/style.css
@@ -70,3 +70,16 @@
 			font-weight: bold;
 			border-radius: 5px 0 0 0;
 		}
+
+
+		.high-score {
+			position: absolute;
+			top: 0;
+			left: 0;
+			background-color: #333;
+			color: white;
+			padding: 10px;
+			font-size: 24px;
+			font-weight: bold;
+			border-radius: 0 5px 0 0;
+		}
